--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://replace-this-with-your-hugo-site.com/"
+baseurl = "http://blog.boriedwork.space/"
 languageCode = "it-it"
 defaultContentLanguage = "it-it"
 title = "Boried Workspace"
